--- a/permutations.html
+++ b/permutations.html
@@ -120,6 +120,31 @@
             Esto es 324 x 6.</p>
             
         <p>No se si esto esta bien, pero igual para mi estos postres son todos IGUALES ... es que me va mas lo salado :)</p>    
+        
+        <p>Por ultimo, esta oracion me trae una duda:</p>
+
+        <p><strong>La masita es especial, puede alinearse con cualquier ingrediente</strong></p>
+
+        <p>Yo interprete que la masita no convierte un molde en rico. Quiero decir
+        que si tengo un molde como:</p>
+
+        <table border="1" width="90px;">
+            <tr><td>bombon</td><td>azul</td><td>frutilla</td></tr>
+            <tr><td>rojo</td><td>manzana</td><td>alfajor</td></tr>
+            <tr><td>amarillo</td><td>pera</td><td>turron</td></tr>                        
+        </table>
+
+        <p>Al poner la masita en la primera fila y primera columna</p>
+
+        <table border="1" width="90px;">
+            <tr><td>MASITA</td><td>azul</td><td>frutilla</td></tr>
+            <tr><td>rojo</td><td>manzana</td><td>alfajor</td></tr>
+            <tr><td>amarillo</td><td>pera</td><td>turron</td></tr>                        
+        </table>
+
+        <p>El grupo vertial Masita, rojo y amarillo no cumple la condicion "cuando tres mismos ingredientes estan alineados vertical u horizonalmente". </p>
+
+        <p>Espero haber entendido el enunciado :(</p>
         </div>
     </div>
 </body>
