--- a/permutations.html
+++ b/permutations.html
@@ -142,7 +142,7 @@
             <tr><td>amarillo</td><td>pera</td><td>turron</td></tr>                        
         </table>
 
-        <p>El grupo vertial Masita, rojo y amarillo no cumple la condicion "cuando tres mismos ingredientes estan alineados vertical u horizonalmente". </p>
+        <p>El grupo vertical Masita, rojo y amarillo no cumple la condicion "cuando tres mismos ingredientes estan alineados vertical u horizonalmente". </p>
 
         <p>Espero haber entendido el enunciado :(</p>
         </div>
